@@ -1,6 +1,7 @@
 package eu.planets_project.ifr.core.sample.impl;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import junit.framework.TestCase;
@@ -68,8 +69,8 @@ public final class PassThruMigrationServiceTest extends TestCase {
              * we simply pass one into the service and expect one back:
              */
             DigitalObject input = new DigitalObject.Builder(ImmutableContent
-                    .byReference(new URL("http://some"))).permanentUrl(
-                    new URL("http://some")).build();
+                    .byReference(new URL("http://some"))).permanentUri(
+                    URI.create("http://some")).build();
             System.out.println("Input: " + input);
 
             MigrateResult mr = dom.migrate(input, null, null, null);
